Fixed bug #35059 (Apache2 crash with mod_rewrite).